fix: stopped hr from overflowing outside of 100vw

--- a/frontend/src/routes/home.css
+++ b/frontend/src/routes/home.css
@@ -29,7 +29,7 @@ hr {
 	&::before {
 		content: '';
 		position: absolute;
-		width: 100vw;
+		width: calc(100vw - 9px);
 		height: 4px;
 		background-color: var(--complementary-black);
 		z-index: -1;
